syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Api";

package user;

service User {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip = 3;
  string user_agent = 4;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message RefreshRequest {
  string refresh_token = 1;
  string user_agent = 2;
  string ip = 3;
}

message RefreshResponse {
  string accessToken = 1;
  string refreshToken = 2;
}